kompose/todo-app-deployment.yaml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  annotations:
    kompose.cmd: kompose convert
    kompose.version: 1.17.0 (a74acad)
  creationTimestamp: null
  labels:
    io.kompose.service: todo-app
  name: todo-app
  namespace: todo-application
spec:
  replicas: 1
  strategy: {}
  template:
    metadata:
      creationTimestamp: null
      labels:
        io.kompose.service: todo-app
    spec:
      containers:
      - env:
        - name: INSPECTIT_EXPORTERS_METRICS_PROMETHEUS_PORT
          value: "8888"
        - name: INSPECTIT_SELF_MONITORING_ENABLED
          value: "true"
        - name: INSPECTIT_SERVICE_NAME
          value: todo-app
        - name: SPRING_DATASOURCE_PASSWORD
          value: todo
        - name: SPRING_DATASOURCE_URL
          value: jdbc:postgresql://${todo-db.service.host}:5432/tododb
        - name: SPRING_DATASOURCE_USERNAME
          value: todo
        image: todolist
        name: todo-app
        imagePullPolicy: IfNotPresent
        ports:
        - containerPort: 5555
        - containerPort: 8888
        resources: {}
      restartPolicy: Always
status: {}
