kompose/todo-inspectit-deployment.yaml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  annotations:
    kompose.cmd: kompose convert
    kompose.version: 1.17.0 (a74acad)
  creationTimestamp: null
  labels:
    io.kompose.service: todo-inspectit
  name: todo-inspectit
spec:
  replicas: 1
  strategy:
    type: Recreate
  template:
    metadata:
      creationTimestamp: null
      labels:
        io.kompose.service: todo-inspectit
    spec:
      containers:
      - image: inspectit/inspectit-ocelot-agent:latest
        name: todo-inspectit
        resources: {}
        volumeMounts:
        - mountPath: /agent
          name: agent-vol
      restartPolicy: Always
      volumes:
      - name: agent-vol
        persistentVolumeClaim:
          claimName: agent-vol
status: {}
