kompose/todo-app-service.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
    kompose.cmd: kompose convert
    kompose.version: 1.17.0 (a74acad)
  creationTimestamp: null
  labels:
    io.kompose.service: todo-app
  name: todo-app
spec:
  ports:
  - name: "5555"
    port: 5555
    targetPort: 5555
  - name: "8888"
    port: 8888
    targetPort: 8888
  selector:
    io.kompose.service: todo-app
status:
  loadBalancer: {}
