kompose/todo-db-exporter-service.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
    kompose.cmd: kompose convert
    kompose.version: 1.17.0 (a74acad)
  creationTimestamp: null
  labels:
    io.kompose.service: todo-db-exporter
  name: todo-db-exporter
spec:
  ports:
  - name: "9187"
    port: 9187
    targetPort: 9187
  selector:
    io.kompose.service: todo-db-exporter
status:
  loadBalancer: {}
