kompose/todo-ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: todo-ingress
  namespace: todo-application
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
    - host: localhost
      http:
        paths:
          - path: /
            backend:
              serviceName: todo-app
              servicePort: 5555
          - path: /metrics
            backend:
              serviceName: todo-app
              servicePort: 8888
